Δημιουργεια κελυφους των GUI FindLight, TrafficLightsTab και ShowTrafficLight. Δηλωση των αντικειμενων Registry και AdminRegistry εκτος της μεθοδου main ωστε να ειναι ορατα σε ολα τα GUI για απλουστερη* χρηση των μεθοδων τους. Τελος δημιουργεια των κλασεων φαναριων για να δουμε αν δουλευει το συστημα και για την επιλυση ολων των errors στην κλαση Registry. *ρωτηστε για διευκρινησεις, ειναι προς συζητηση και το κανουμε και με καλυτερο τροπο αν εχετε ιδεες

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,8 @@
-/LoginGui$1.class
-/LoginGui$2.class
-/LoginGui$3.class
-/LoginGui.class
-/Main.class
-/SignupGui$1.class
-/SignupGui.class
-/StartMenuGUI$1.class
-/StartMenuGUI$2.class
-/StartMenuGUI.class
-/Registry.class
+/FindLightGUI.class
+/TrafficLightTabGUI.class
+/ShowTrafficLightGUI.class
 /TrafficLight.class
-/dsf.class
+/PedestrianTrafficLight.class
+/ThreeColorTrafficLight.class
+/SingleColorTrafficLight.class
+/BicycleTrafficLight.class
