Προσθηκη διευκρινηστικων σχολιων

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/Main.java=UTF-8
+encoding//src/ShowTrafficLightGUI.java=UTF-8
 encoding//src/TrafficLight.java=UTF-8
 encoding//src/TrafficLightTabGUI.java=UTF-8
