--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,22 @@
+/FindLightGUI$1.class
+/FindLightGUI$2.class
+/FindLightGUI$3.class
+/FindLightGUI$4.class
 /FindLightGUI.class
-/TrafficLightTabGUI.class
-/ShowTrafficLightGUI.class
-/TrafficLight.class
+/LoginGui$1.class
+/LoginGui$2.class
+/LoginGui$3.class
+/LoginGui.class
+/Main.class
 /PedestrianTrafficLight.class
-/ThreeColorTrafficLight.class
+/Registry.class
+/ShowTrafficLightGUI.class
+/SignupGui$1.class
+/SignupGui.class
 /SingleColorTrafficLight.class
-/BicycleTrafficLight.class
+/StartMenuGUI$1.class
+/StartMenuGUI$2.class
+/StartMenuGUI.class
+/ThreeColorTrafficLight.class
+/TrafficLight.class
+/TrafficLightTabGUI.class
