Προσθήκες στο FindLightGUI και δημιουργία του CreateGUI

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -20,3 +20,7 @@
 /ThreeColorTrafficLight.class
 /TrafficLight.class
 /TrafficLightTabGUI.class
+/TrafficRenderer.class
+/CreateGUI.class
+/CreateGUI$1.class
+/CreateGUI$2.class
