Προσθήκη κλάσης ChangeType_DeleteGUI

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,6 @@
+/CreateGUI$1.class
+/CreateGUI$2.class
+/CreateGUI.class
 /FindLightGUI$1.class
 /FindLightGUI$2.class
 /FindLightGUI$3.class
@@ -6,10 +9,15 @@
 /LoginGui$1.class
 /LoginGui$2.class
 /LoginGui$3.class
+/LoginGui$4.class
 /LoginGui.class
 /Main.class
 /PedestrianTrafficLight.class
 /Registry.class
+/ShowTrafficLightGUI$1.class
+/ShowTrafficLightGUI$2.class
+/ShowTrafficLightGUI$3.class
+/ShowTrafficLightGUI$4.class
 /ShowTrafficLightGUI.class
 /SignupGui$1.class
 /SignupGui.class
@@ -19,8 +27,14 @@
 /StartMenuGUI.class
 /ThreeColorTrafficLight.class
 /TrafficLight.class
+/TrafficLightTabGUI$1.class
+/TrafficLightTabGUI$2.class
+/TrafficLightTabGUI$3.class
+/TrafficLightTabGUI$4.class
+/TrafficLightTabGUI$5.class
 /TrafficLightTabGUI.class
 /TrafficRenderer.class
-/CreateGUI.class
-/CreateGUI$1.class
-/CreateGUI$2.class
+/ChangeType_DeleteGUI.class
+/ChangeType_DeleteGUI$1.class
+/ChangeType_DeleteGUI$2.class
+/ChangeType_DeleteGUI$3.class
