--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,40 +1,6 @@
+/ShowTrafficLightDetailsGUI$1.class
+/ShowTrafficLightDetailsGUI$2.class
 /CreateGUI$1.class
 /CreateGUI$2.class
-/CreateGUI.class
-/FindLightGUI$1.class
-/FindLightGUI$2.class
-/FindLightGUI$3.class
-/FindLightGUI$4.class
-/FindLightGUI.class
-/LoginGui$1.class
-/LoginGui$2.class
-/LoginGui$3.class
-/LoginGui$4.class
-/LoginGui.class
-/Main.class
-/PedestrianTrafficLight.class
-/Registry.class
-/ShowTrafficLightGUI$1.class
-/ShowTrafficLightGUI$2.class
-/ShowTrafficLightGUI$3.class
-/ShowTrafficLightGUI$4.class
-/ShowTrafficLightGUI.class
-/SignupGui$1.class
-/SignupGui.class
-/SingleColorTrafficLight.class
-/StartMenuGUI$1.class
-/StartMenuGUI$2.class
-/StartMenuGUI.class
-/ThreeColorTrafficLight.class
-/TrafficLight.class
-/TrafficLightTabGUI$1.class
-/TrafficLightTabGUI$2.class
-/TrafficLightTabGUI$3.class
-/TrafficLightTabGUI$4.class
-/TrafficLightTabGUI$5.class
-/TrafficLightTabGUI.class
-/TrafficRenderer.class
-/ChangeType_DeleteGUI.class
-/ChangeType_DeleteGUI$1.class
-/ChangeType_DeleteGUI$2.class
-/ChangeType_DeleteGUI$3.class
+/CreateGUI$3.class
+/CreateGUI$4.class
